--- a/SpringBoot/설치 및 환경 설정/06. classnotfoundexception.md
+++ b/SpringBoot/설치 및 환경 설정/06. classnotfoundexception.md
@@ -4,8 +4,17 @@
 
 라이브러리가 중간에 바껴서, 꼬인 것 같은 느낌.
 버전이 달랐거나, 없는걸 추가해서 그렇거나
+
+해결
+1. application.properties 수정
+2. MySQL 스키마 생성
+3. build.gradle url 수정
+4. gradle 새로고침 후 실행
+SUCCESS
 ```
 
+<br>
+<br>
 <br>
 
 ```java
@@ -24,4 +33,19 @@ dependencies {
 	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.33'
 	...
 }
+```
+
+<br>
+<br>
+<br>
+
+```java
+// 전
+
+spring.datasource.url=jdbc:mysql://localhost:3306
+```
+```java
+// 후
+
+spring.datasource.url=jdbc:mysql://localhost:3306/test
 ```
