--- a/개발 메뉴얼/1. 진행 순서.md
+++ b/개발 메뉴얼/1. 진행 순서.md
@@ -33,3 +33,32 @@
 4. 마무리 및 그 외
  - 발표
 ```
+
+## 프론트
+0. 피그마
+```
+피그마 작성 시
+
+vuetify 혹은 bootstrap, 등 다양한 디자인에 맞춰서
+피그마 작성할 것
+
+이벤트 트리거를 확실히 할 것
+
+모든 기능이 구현되어 있는지 체크할 것
+
+
+1. 한사람이 맡아서 우선적으로 진행할 것
+(전체적인 디자인, 구조)
+2. 나머지 사람들이 지원하는 느낌으로 작업 진행
+```
+1. directory 및 전체적인 레이아웃 구조 짜기
+2. 그다음 컴포넌트 구성
+3. css 디자인 먼저
+4. 그다음 기능 추가
+
+
+## 백앤드
+해보고 싶은 작업
+1. rest api
+2. jwt
+3. 인프라(젠킨스, 도커)
