--- a/자율주행/자율주행특강.md
+++ b/자율주행/자율주행특강.md
@@ -3,14 +3,14 @@
 ## 자율주행단계
 
 ## 대표적인 자율주행 기업(테슬라,웨이모)
-![alt text](image.png)
+![alt text](image/image.png)
 - 테슬라는 다른 센서를 모두 제외하고 카메라 센서만 사용하는 방향으로 가고 있음
 - 테슬라 : 차량 백그라운드에선 인공지능 모델 돌려서, 사용자들이 어떤 판단을 내리는지 학습하고 있음
 - 웨이모는 자율주행 택시를 주로 하고 작업하고 있음
 - 라이다를 사용하는 방향
 
 ## 대표적인 자율주행 기업(국내 현차) 
-![alt text](image-1.png)
+![alt text](image/image-1.png)
 - 출시가 목적이었으나, 살짝 딜레이가 발생함
 - 법규도 변경될 필요가 있음
 
@@ -20,31 +20,31 @@
 3. 제어 : 차량의 조향 및 속도 제어
 
 ## 인지 기술
-![alt text](image-2.png)
+![alt text](image/image-2.png)
 
 ## 자율주행 시스템 구조
-![alt text](image-3.png)
+![alt text](image/image-3.png)
 - v2x로 지속적인 통신이 필요함
 
 ## 자율주행 요소 기술
-![alt text](image-4.png)
+![alt text](image/image-4.png)
 
 ## 인지 - 센서
 
 ### 주변 환경 인식
-![alt text](image-5.png)
+![alt text](image/image-5.png)
 - 다양센서 조합으로 장점 극대화, 단점 보완하는 방향으로 구성
 - 센서 위치도 중요한 요소
 
 ### 라이다 센서
-![alt text](image-6.png)
+![alt text](image/image-6.png)
 - 눈 비 안개 등 악천후에 민감
 - 비싸서 양산이 힘듬
 - 3D 기술
 - 속도 파악이 안됨(?)
 
 ### 레이더 센서
-![alt text](image-7.png)
+![alt text](image/image-7.png)
 - 포인트 클라우드로 표현
 - 이를 통해 물체 감지
 - 장애물 여부 정도만 판단함
@@ -53,14 +53,14 @@
 - 눈 비 안개 등 악천후에 영향 받지 않음
 
 ### 카메라 센서
-![alt text](image-8.png)
+![alt text](image/image-8.png)
 - 정확한 사물 파악이 필요함
 - 터널 들어갈때 나갈때, 빛 강도가 바뀔땐 주변 인지가 늦음. 적응시간이 필요함
 - 테슬라 : 카메라 센서 12개로 구성
 - 비오면, 카메라 센서의 렌즈에 빗물이 맺혀서 왜곡이 발생하면 어떡하냐 -> 하드웨어적으로 빗물이 맺히지 않게 기술을 추가하는 듯
 
 ### GPS
-![alt text](image-9.png)
+![alt text](image/image-9.png)
 - 고주파라서 여러 오차가 발생할 수 있음
     - 지하/터널/도심(빌딩숲) 등에서 음영 지역 발생
     - A-GPS를 활용해서 오차를 줄일 수 있음
@@ -68,35 +68,35 @@
 
 
 ### IMU센서
-![alt text](image-10.png)
+![alt text](image/image-10.png)
 
 
 ### 정밀지도(HD맵)
-![alt text](image-11.png)
+![alt text](image/image-11.png)
 
 ### 일반적인 위치 추정 기술
-![alt text](image-12.png)
+![alt text](image/image-12.png)
 
 ### SLAM 기술
-![alt text](image-13.png)
+![alt text](image/image-13.png)
 
 ### 객체 인지 기술
-![alt text](image-14.png)
+![alt text](image/image-14.png)
 
 ### 카메라 기반 객체 인식
-![alt text](image-15.png)
+![alt text](image/image-15.png)
 - 어떤 객체인지, 어떤 물체인지, 어느 방향으로 이동 중인지 확인 가능
 
 ### 라이다 기반 객체 인식
-![alt text](image-16.png)
+![alt text](image/image-16.png)
 
 ### 경로 계획 기술
-![alt text](image-17.png)
+![alt text](image/image-17.png)
 
 ### 자율 주행 시뮬레이션
-![alt text](image-18.png)
+![alt text](image/image-18.png)
 - 시뮬레이션 개발도 활발
 - 실제로는 예측불가능한 상황을 직접 겪는 일이 흔하지 않아서 학습이 어려움. 그걸 시뮬레이션으로 해소할 수 있음
 
 ### 모라이
-![alt text](image-19.png)
+![alt text](image/image-19.png)
